<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <!--scroll-->

        <!--header block -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:orientation="horizontal"
                android:paddingTop="@dimen/size_small_24"
                android:paddingBottom="@dimen/size_small_24">
                <!--счет рейтинга-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/user_rating"
                        style="@style/text.title"
                        android:text="@string/score"/>
                    <TextView
                        style="@style/text"
                        android:text="@string/score_str"/>
                </LinearLayout>
                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="@dimen/height_line"
                    android:background="@color/gray_light"/>
                <!--счет строк кода-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/user_code_lines"
                        style="@style/text.title"
                        android:text="@string/code_count"/>
                    <TextView
                        style="@style/text"
                        android:text="@string/code_str"/>
                </LinearLayout>
                <View
                    android:layout_width="@dimen/line_size"
                    android:layout_height="@dimen/height_line"
                    android:background="@color/gray_light"/>
                <!--счет проектов-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/user_projects"
                        style="@style/text.title"
                        android:text="@string/app_num"/>
                    <TextView
                        style="@style/text"
                        android:text="@string/app_str"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_small_8"
                android:layout_marginBottom="@dimen/size_small_8">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_phone_black_24dp"></ImageView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/size_medium_32"
                    android:layout_marginRight="@dimen/size_small_16">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/phone_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout></LinearLayout>
                <ImageView
                    android:id="@+id/call_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/size_large_72"/>


            //email
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_small_8"
                android:layout_marginBottom="@dimen/size_small_8">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"></ImageView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/size_medium_32"
                    android:layout_marginRight="@dimen/size_small_16">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout></LinearLayout>
                <ImageView
                    android:id="@+id/email_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/size_large_72"/>
            //vk
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_small_8"
                android:layout_marginBottom="@dimen/size_small_8">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk_circle"></ImageView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/size_medium_32"
                    android:layout_marginRight="@dimen/size_small_16">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/vk_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vk"
                            android:inputType="text"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout></LinearLayout>
                <ImageView
                    android:id="@+id/vk_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/size_large_72"/>
            //github
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_small_8"
                android:layout_marginBottom="@dimen/size_small_8">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github_circle"></ImageView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/size_medium_32"
                    android:layout_marginRight="@dimen/size_small_16">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/git_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/git"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout></LinearLayout>
                <ImageView
                    android:id="@+id/git_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_light"
                android:layout_marginLeft="@dimen/size_large_72"/>
            //about
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_small_8"
                android:layout_marginBottom="@dimen/size_small_8">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black"></ImageView>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="@dimen/size_medium_32"
                    android:layout_marginRight="@dimen/size_small_16">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            android:id="@+id/about_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/about"
                            android:inputType="textMultiLine"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_light"
                            android:focusable="false"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>